cert-manager/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  
    cert-manager.io/cluster-issuer: letsencrypt-production
    prometheus.io/scrape: true
spec:
  rules:
  - host: echo-ingress.kubeshore.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: echo1
              port:
                number: 80
  - host: echo-ingress.kubeshore.com
    http:
        paths:
        - pathType: Prefix
          path: "/v2"
          backend:
            service:
              name: echo2
              port:
                number: 80                
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - echo-ingress.kubeshore.com
    secretName: echo-tls
