cert-manager/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"    
  name: grafana-ingress
spec:  
  rules:
  - host: test-grafana.kubeshore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: grafana-np
            port: 
              number: 80
  tls:
  - hosts:
    - test-grafana.kubeshore.com
    secretName: test-grafana-tls              
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"    
  name: prometheus-ingress
spec:
  rules:
  - host: test-prometheus.kubeshore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prometheus-server-np
            port: 
              number: 80
  tls:
  - hosts:
    - test-prometheus.kubeshore.com
    secretName: test-prometheus-tls
